--- a/src/BddBundle/Resources/views/Coaster/ranking.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/ranking.html.twig
@@ -12,7 +12,7 @@
                 <div class="media-left">
                     <a href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}">
                         {% if image|length > 0 %}
-                            <img src="{{ asset(random(image)) | imagine_filter('thumb_coaster') }}"
+                            <img src="{{ asset(random(image)) | imagine_filter('coaster_ranking') }}"
                                  class="img-rounded"
                                  style="width:96px;"
                                  alt="{{ coaster.name }}">
@@ -33,7 +33,11 @@
                     <ul class="list-inline list-inline-separate text-muted mb-10">
                         <li>{{ coaster.builtCoaster.manufacturer.name }}</li>
                         <li>{{ coaster.builtCoaster.types|join(', ') }}</li>
-                        <li>{{ coaster.park.name }}, {{ coaster.park.country.name|trans([], 'database') }}</li>
+                        <li>
+                            <a class="text-muted" href="{{ path('park_show', {'slug': coaster.park.slug}) }}">
+                                {{ coaster.park.name }}, {{ coaster.park.country.name|trans([], 'database') }}
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="media-right text-center">
