--- a/src/BddBundle/Resources/views/Liste/show.html.twig
+++ b/src/BddBundle/Resources/views/Liste/show.html.twig
@@ -31,7 +31,11 @@
                     <ul class="list-inline list-inline-separate text-muted mb-10">
                         <li>{{ coaster.builtCoaster.manufacturer.name }}</li>
                         <li>{{ coaster.builtCoaster.types|join(', ') }}</li>
-                        <li>{{ coaster.park.name }}, {{ coaster.park.country.name|trans([], 'database') }}</li>
+                        <li>
+                            <a class="text-muted" href="{{ path('park_show', {'slug': coaster.park.slug}) }}">
+                                {{ coaster.park.name }}, {{ coaster.park.country.name|trans([], 'database') }}
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </li>
