update label save list

--- a/src/BddBundle/Resources/views/Liste/edit.html.twig
+++ b/src/BddBundle/Resources/views/Liste/edit.html.twig
@@ -54,7 +54,7 @@
         </div>
     </div>
     <button type="submit" class="btn bg-teal-400 btn-labeled pull-right">
-        <b><i class="icon-pencil3"></i></b> {{ 'liste.update'|trans }}
+        <b><i class="icon-pencil3"></i></b> {{ 'liste.save'|trans }}
     </button>
     {{ form_rest(form) }}
     {{ form_end(form) }}
