add link to send review

--- a/src/BddBundle/Resources/views/Coaster/reviews.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/reviews.html.twig
@@ -4,7 +4,7 @@
         <div class="panel-heading">
             <h6 class="panel-title text-semiold">
                 {{ 'review.title'|trans() }}
-                &nbsp;<span class="badge badge-primary">{{ reviews|length }}
+                &nbsp;<span class="badge badge-primary">{{ reviews|length }}</span>
             </h6>
         </div>
 
