add badge "more to come"

--- a/src/BddBundle/Resources/views/Profile/me.html.twig
+++ b/src/BddBundle/Resources/views/Profile/me.html.twig
@@ -73,8 +73,10 @@
                         <div class="panel-body">
                             <div class="row">
                                 <div class="col-sm-4">
-                                    <img id="shadow4" style="width:200px;"
-                                         src="{{ asset('images/badges/bienvenue.png') }}"/>
+                                    <img src="{{ asset('images/badges/bienvenue.png') }}"/>
+                                </div>
+                                <div class="col-sm-4">
+                                    <img src="{{ asset('images/badges/more.png') }}"/>
                                 </div>
                             </div>
                         </div>
