--- a/src/BddBundle/Resources/views/Default/index.html.twig
+++ b/src/BddBundle/Resources/views/Default/index.html.twig
@@ -84,7 +84,7 @@
             <!-- latest ratings -->
             <div class="panel panel-flat border-top-teal">
                 <div class="panel-heading">
-                    <h6 class="panel-title">{{ 'rating.last'|trans() }}</h6>
+                    <h6 class="panel-title">{{ 'rating.last'|trans }}</h6>
                 </div>
                 <div class="panel-body">
                     <ul class="list-feed">
@@ -109,7 +109,7 @@
             <!-- latest reviews -->
             <div class="panel panel-flat">
                 <div class="panel-heading">
-                    <h6 class="panel-title text-semiold">{{ 'review.last'|trans() }}</h6>
+                    <h6 class="panel-title text-semiold">{{ 'review.last'|trans }}</h6>
                 </div>
 
                 <div class="panel-body">
