--- a/src/BddBundle/Resources/views/Park/show.html.twig
+++ b/src/BddBundle/Resources/views/Park/show.html.twig
@@ -75,9 +75,9 @@
                                              style="font-size: 22px;"></div>
                                     {% else %}
                                         <p class="text-muted content-group-sm">
-                                            {{ 'coaster.rating.mustlogin'|trans() }}
+                                            {{ 'coaster.rating.mustlogin'|trans }}
                                         </p>
-                                        <a href="{{ path('hwi_oauth_connect') }}">{{ 'coaster.rating.login'|trans() }}</a>
+                                        <a href="{{ path('hwi_oauth_connect') }}">{{ 'coaster.rating.login'|trans }}</a>
                                     {% endif %}
                                 {% endif %}
                             </div>
