--- a/src/BddBundle/Resources/views/Review/form.html.twig
+++ b/src/BddBundle/Resources/views/Review/form.html.twig
@@ -57,7 +57,7 @@
             </div>
             <div class="text-right">
                 <button type="submit" class="btn btn-primary">
-                    {{ 'review.button'|trans }}
+                    {{ 'review.send'|trans }}
                     <i class="icon-arrow-right14 position-right"></i>
                 </button>
             </div>
