--- a/src/BddBundle/Resources/views/Default/index.html.twig
+++ b/src/BddBundle/Resources/views/Default/index.html.twig
@@ -164,15 +164,20 @@
                                         </p>
                                     {% endif %}
                                     {% if review.review %}
-                                        <p>{{ review.review }}</p>
+                                        <p>
+                                            {{ review.review|slice(0, 600) }}
+                                            {% if review.review|length > 600 %}...{% endif %}
+                                        </p>
                                     {% endif %}
                                     {% if is_granted('ROLE_USER') and app.user.id == review.user.id %}
                                         <ul class="list-inline list-inline-separate text-size-small">
                                             {#<li>114 <a href="#"><i class="icon-arrow-up22 text-success"></i></a><a href="#"><i#}
                                             {#class="icon-arrow-down22 text-danger"></i></a></li>#}
-                                            <li><a href="{{ path('review_form', {'id': review.coaster.id}) }}">Modifier
-                                                    mon
-                                                    avis</a></li>
+                                            <li>
+                                                <a href="{{ path('review_form', {'id': review.coaster.id}) }}">
+                                                    Modifier mon avis
+                                                </a>
+                                            </li>
                                         </ul>
                                     {% endif %}
                                 </div>
