--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -31,8 +31,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://coastersworld.fr/">
-                            <i class="icon-newspaper2"></i> <span>{{ 'sidebar.news'|trans }}</span>
+                        <a href="{{ path('default_contact') }}">
+                            <i class="icon-mail5"></i> <span>{{ 'sidebar.contact'|trans }}</span>
                         </a>
                     </li>
                     <li>
