add public profiles

--- a/src/BddBundle/Resources/views/Coaster/reviews.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/reviews.html.twig
@@ -31,7 +31,9 @@
 
                         <div class="media-body">
                             <div class="media-heading">
-                                {{ review.user.displayName }}
+                                <a href="{{ path('user_profile', {'id': review.user.id}) }}">
+                                    {{ review.user.displayName }}
+                                </a>
                                 <span class="media-annotation dotted">
                                             <span class="text-warning">
                                                 {% set low = review.value|round(0, 'floor') %}
