fix select2 max items

--- a/src/BddBundle/Resources/views/Review/form.html.twig
+++ b/src/BddBundle/Resources/views/Review/form.html.twig
@@ -48,7 +48,7 @@
             </div>
             <div class="form-group">
                 {{ form_label(form.negativeKeywords, "", {'label_attr': {'class': 'control-label'}}) }}
-                {{ form_widget(form.negativeKeywords, {'attr': {'class': 'select col-lg-10'}}) }}
+                {{ form_widget(form.negativeKeywords) }}
             </div>
 
             <div class="form-group">
