--- a/src/BddBundle/Resources/views/Coaster/show.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/show.html.twig
@@ -300,6 +300,18 @@
                 }, 'JSON');
             });
         });
+        function deleteRating(id, obj) {
+            var url = Routing.generate(
+                'rating_delete',
+                {'id': id, '_locale': '{{ app.request.locale }}'}
+            );
+            $.ajax({
+                url: url,
+                type: "DELETE",
+            }).done(function () {
+                $(obj).remove();
+            });
+        }
     </script>
     {% if coaster.park.latitude and coaster.park.longitude %}
         <script>
