--- a/src/BddBundle/Resources/views/User/list_ratings.html.twig
+++ b/src/BddBundle/Resources/views/User/list_ratings.html.twig
@@ -27,11 +27,11 @@
             <table class="table">
                 <thead>
                 <tr>
-                    <th>{{ knp_pagination_sortable(ratings, 'Coaster', 'c.name') }}</th>
-                    <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'Constructeur', ['m.name']) }}</th>
-                    <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'Ouverture', ['c.openingDate']) }}</th>
-                    <th>{{ knp_pagination_sortable(ratings, 'Note', ['r.value']) }}</th>
-                    <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'Noté le', 'r.updatedAt') }}</th>
+                    <th>{{ knp_pagination_sortable(ratings, 'user_rating.coaster'|trans, 'c.name') }}</th>
+                    <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'user_rating.manufacturer'|trans, ['m.name']) }}</th>
+                    <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'user_rating.opening_date'|trans, ['c.openingDate']) }}</th>
+                    <th>{{ knp_pagination_sortable(ratings, 'user_rating.rating'|trans, ['r.value']) }}</th>
+                    <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'user_rating.rated_at'|trans, 'r.updatedAt') }}</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -42,7 +42,8 @@
                                class="text-semibold">{{ rating.coaster.name }}</a>
                             <div class="text-muted text-size-small">
                                 <span class="status-mark bg-{{ rating.coaster.status.type }} position-left"></span>
-                                <a class="text-muted" href="{{ path('park_show', {'slug': rating.coaster.park.slug}) }}">
+                                <a class="text-muted"
+                                   href="{{ path('park_show', {'slug': rating.coaster.park.slug}) }}">
                                     {{ rating.coaster.park.name }}
                                 </a>
 
